# personal-dev

local_rag/: pyproject.toml
local_rag/cache/: manager.py
local_rag/rag/: manager.py  prompts.py
